examples/test/testpolicy11979.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11979
  namespace: namespace27
spec:
  podSelector:
    matchLabels:
      key27: value14
      key46: value39
      key7: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value41
      podSelector:
        matchLabels:
          key39: value33
